# jpf4826-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  cliff.toml  jpf4826_modbus.md
.cargo/: config.toml
.claude/: settings.local.json
.claude/agents/: post-edit-validator.md
.claude/skills/rusty/: 01_ai_guidelines.md  02_application_guidelines.md  03_documentation.md  04_ffi_guidelines.md  05_library_guidelines.md  06_performance_guidelines.md  07_safety_guidelines.md  08_universal_guidelines.md  09_libraries_building_guidelines.md  10_libraries_interoperability_guidelines.md  11_libraries_resilience_guidelines.md  12_libraries_ux_guidelines.md  README.md  SKILL.md
.github/workflows/: bump-version.yml  ci.yml  release-build.yml  release.yml
jpf4826_driver/: Cargo.toml  README.md  jpf4826_modbus.md
jpf4826_driver/src/: client.rs  conversions.rs  error.rs  lib.rs  modbus.rs  registers.rs  types.rs
jpf4826_driver/tests/: client_read_tests.rs  client_write_tests.rs  conversions_tests.rs  mock.rs  timeout_tests.rs  types_tests.rs
jpf4826ctl/: Cargo.toml  README.md
jpf4826ctl/schemas/: jpf4826-status-response.schema.json
jpf4826ctl/src/: cli.rs  main.rs  output.rs
jpf4826ctl/src/commands/: mod.rs  reset.rs  set.rs  status.rs
schemas/: jpf4826-status-response.schema.json
utils/: bump-version.sh
