[package]
name = "jpf4826ctl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for JPF4826 fan controller"
keywords = ["cli", "fan-controller", "jpf4826", "modbus"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "jpf4826ctl"
path = "src/main.rs"

[dependencies]
jpf4826_driver = { version = "0.1.0", path = "../jpf4826_driver" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde_json = { workspace = true }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
